--- a/php/style/indexstyle_design.css
+++ b/php/style/indexstyle_design.css
@@ -1235,3 +1235,10 @@ hr{
 .popover ul li a{
 	cursor: pointer;
 }
+.VyakhyaDescriptor{
+
+	background-color: #F7F7F7;
+	padding: 1em 2em;
+	margin: 0.5em 0 1em 0;
+	border-radius: 10px;
+}
