Commit No. 127 - trigger insertion underway, close button appended to class instead of an id

--- a/php/style/indexstyle_design.css
+++ b/php/style/indexstyle_design.css
@@ -337,7 +337,10 @@ sstitlekan{
 	margin: 1em;
 	font-size: 1.5em;
 }
-.intro_bhashya, .bhashya{
+.intro_bhashya{
+	text-align: left;
+}
+.bhashya{
 	text-align: justify;
 }
 .lpage ul li{
